# infrabot-nlp

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONFIGURATION_GUIDE.md  CONTRIBUTING.md  Dockerfile  GCP_TOOLS_ARCHITECTURE.md  MODULE_OVERVIEW.md  PRODUCT_REQUIREMENT_DOCUMENT.md  README.md  RUNNING_GUIDE.md  SECURITY.md  TESTING.md  TROUBLESHOOTING.md  adk_demo.py  coding_style.md  debug_agent.py  delete_vpc_subnets.sh  demo_adk_system.py  demo_system.py  docker-compose.yml  import_results.txt  interactive_demo.py  pyproject.toml  pytest.ini  quick_test.py  requirements-dev.txt  requirements.txt  run_adk_agent.py  run_agent.py  run_openai_agent.py  setup.py  setup_adk.sh  test_adk.py  test_adk_agent.py  test_agent.py  test_deletion.py
adk_cli_agent/: __init__.py  __main__.py  agent.py
adk_cli_agent/tools/: __init__.py  command_tools.py  confirmation_tools.py  gcp_api_utils.py  gcp_project.py  gcp_subnet.py  gcp_subnet_update.py  gcp_tools.py  gcp_tools_new.py  gcp_vpc.py  gcp_vpc_utils.py  time_tools.py
credentials/: README.md  gcp-service-account-key-example.json
examples/: gcp_agent_demo.py  monitoring_demo.py  use_root_agent.py
my_cli_agent/: .env.example  agent.py  agent_new.py  gcp_credentials.env  models.py
my_cli_agent/providers/: __init__.py  anthropic.py  base.py  gemini.py  mock.py  openai.py
my_cli_agent/tools/: __init__.py  base.py  command_tools.py  gcp_tools.py  gcp_tools_new.py  terminal_tools.py  time_tools.py
my_cli_agent/tools/gcp/: __init__.py
tests/: __init__.py
tests/gcp/compute/: test_compute_tools.py
tests/unit/: __init__.py
(+71 files in other folders)
