[tool.poetry]
name = "infrabot-nlp"
version = "0.1.0"
description = "Infrastructure management with NLP capabilities"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
# Use the latest version of google-cloud-resourcemanager
google-cloud-resourcemanager = "^1.0.0, ^2.0.0, ^3.0.0, ^4.0.0"
google-auth = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-mock = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
